Fix underflow correction occurring during normal rendering.

We should not be trying to expire frames during the normal
rendering process. This corrects a conditional which was
incorrectly allowing this behavior and fixes the test which
were relying on this behavior.

Testing the inverse (i.e. what was broken) is not in this
CL, since I ran out of time to add it for now.

Notably, I wasn't able to reproduce any issues arising from
this mistake. In practice, Render() occurs with such frequency
that it's rare for FrameReady() to occur fast enough to out
pace it in a meaningful manner relative to the frame duration.

BUG=667704
TEST=updated unittests.

Review-Url: https://codereview.chromium.org/2570013003
Cr-Commit-Position: refs/heads/master@{#438596}

Former-commit-id: 8ac9ef71a561a281bd867e23fcd31e129373ab37